--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: discordant
 Version: 0.99.5
 Date: 2016-10-21
-Title: The Discordant Method: A Novel Approach for Differential
-        Correlation
+Title: The Discordant Method: A Novel Approach for Differential Correlation
 Authors@R: c(person("Charlotte", "Siska", role = c("aut", "cre"), email = "charlotte.siska@ucdenver.edu"), person("Katerina", "Kechris", role = c("aut")))
 Author: Charlotte Siska [cre,aut], Katerina Kechris [aut]
-Depends R (>= 3.4)
+Depends: R (>= 3.3)
 Maintainer: Charlotte Siska <siska.charlotte@gmail.com>
 Description: Discordant is a method to determine differential correlation of molecular feature pairs from -omics data using mixture models. Algorithm is explained further in Siska et al.
 Encoding: latin1
-biocViews: BiologicalQuestion, StatisticalMethod, mRNAMicroarray,
-        Microarray, Genetics, RNASeq
-Imports: stats, biwt, gtools, MASS, tools
+biocViews: BiologicalQuestion, StatisticalMethod, mRNAMicroarray, Microarray, Genetics, RNASeq
+Suggests: BiocStyle, knitr
+Imports: Biobase, stats, biwt, gtools, MASS, tools
 License: GPL (>= 2)
 URL: https://github.com/siskac/discordant
 NeedsCompilation: yes
+VignetteBuilder: knitr
 Packaged: 2016-10-23 17:49:47 UTC; siskac
