--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,14 @@ Package: discordant
 Version: 0.99.8
 Date: 2016-10-21
 Title: The Discordant Method: A Novel Approach for Differential Correlation
-Authors@R: c(person("Charlotte", "Siska", role = c("aut", "cre"), email = "charlotte.siska@ucdenver.edu"), person("Katerina", "Kechris", role = c("aut")))
-Author: Charlotte Siska [cre,aut], Katerina Kechris [aut]
+Authors@R: 
+    c(person("Charlotte", "Siska", 
+             role = c("aut"), 
+             email = "charlotte.siska@ucdenver.edu"), 
+      person("Katerina", "Kechris",
+             role = c("aut", "cph", "ths")),
+      person("McGrath", "Max", 
+             role = c("ctb", "cre"))),
 Depends: R (>= 3.4)
 Maintainer: Charlotte Siska <siska.charlotte@gmail.com>
 Description: Discordant is a method to determine differential correlation of molecular feature pairs from -omics data using mixture models. Algorithm is explained further in Siska et al.
