--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,5 @@
 Package: discordant
+Type: Package
 Version: 1.17.0
 Date: 2016-10-21
 Title: The Discordant Method: A Novel Approach for Differential
@@ -17,12 +18,22 @@ Maintainer: Max McGrath <max.mcgrath@ucdenver.edu>
 Description: Discordant is a method to determine differential
         correlation of molecular feature pairs from -omics data using
         mixture models. Algorithm is explained further in Siska et al.
-Encoding: latin1
-biocViews: ImmunoOncology, BiologicalQuestion, StatisticalMethod, mRNAMicroarray,
-        Microarray, Genetics, RNASeq
-Suggests: BiocStyle, knitr
-Imports: Biobase, stats, biwt, gtools, MASS, tools
+Encoding: UTF-8
+biocViews: ImmunoOncology, BiologicalQuestion, StatisticalMethod, 
+    mRNAMicroarray,
+    Microarray, Genetics, RNASeq
+Suggests: BiocStyle, knitr, testthat
+Imports: 
+    Rcpp,
+    Biobase,
+    stats,
+    biwt,
+    gtools,
+    MASS,
+    tools
 License: GPL (>= 2)
 URL: https://github.com/siskac/discordant
 NeedsCompilation: yes
+LinkingTo: Rcpp
 VignetteBuilder: knitr
+RoxygenNote: 7.1.1
