--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,33 +4,20 @@ Version: 1.17.0
 Date: 2016-10-21
 Title: The Discordant Method: A Novel Approach for Differential
         Correlation
-Authors@R: 
-    c(person("Charlotte", "Siska", 
-             role = c("aut"), 
-             email = "charlotte.siska@ucdenver.edu"),
-      person("McGrath", "Max",
-             email = "max.mcgrath@ucdenver.edu",
-             role = c("ctb", "cre")), 
-      person("Katerina", "Kechris",
-             role = c("aut", "cph", "ths")))
-Depends: R (>= 3.4)
-Maintainer: Max McGrath <max.mcgrath@ucdenver.edu>
+Authors@R: c(person("Charlotte", "Siska", role = c("aut"),
+                    email = "charlotte.siska@ucdenver.edu"),
+             person("McGrath", "Max", role = c("aut", "cre"),
+                    email = "max.mcgrath@ucdenver.edu"), 
+             person("Katerina", "Kechris", role = c("aut", "cph", "ths")))
+Depends: R (>= 4.0)
 Description: Discordant is a method to determine differential
         correlation of molecular feature pairs from -omics data using
         mixture models. Algorithm is explained further in Siska et al.
 Encoding: UTF-8
 biocViews: ImmunoOncology, BiologicalQuestion, StatisticalMethod, 
-    mRNAMicroarray,
-    Microarray, Genetics, RNASeq
+    mRNAMicroarray, Microarray, Genetics, RNASeq
 Suggests: BiocStyle, knitr, testthat
-Imports: 
-    Rcpp,
-    Biobase,
-    stats,
-    biwt,
-    gtools,
-    MASS,
-    tools
+Imports: Rcpp, Biobase, stats, biwt, gtools, MASS, tools
 License: GPL (>= 2)
 URL: https://github.com/siskac/discordant
 NeedsCompilation: yes
