--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ import(gtools)
 import(stats)
 import(tools)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,case_when)
 useDynLib(discordant, .registration = TRUE)
