--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ import(stats)
 import(tools)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,case_when)
+importFrom(methods,is)
 useDynLib(discordant, .registration = TRUE)
