--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ import(tools)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,case_when)
 importFrom(methods,is)
+importFrom(utils,combn)
 useDynLib(discordant, .registration = TRUE)
