--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,13 @@ Authors@R: c(person("Charlotte", "Siska", role = c("aut"),
              person("McGrath", "Max", role = c("aut", "cre"),
                     email = "max.mcgrath@ucdenver.edu"), 
              person("Katerina", "Kechris", role = c("aut", "cph", "ths")))
-Depends: R (>= 4.0)
-Description: Discordant is a method to determine differential
-        correlation of molecular feature pairs from -omics data using
-        mixture models. Algorithm is explained further in Siska et al.
+Depends: R (>= 4.1.0)
+Description: Discordant is an R package that identifies pairs of features that 
+    correlate differently between phenotypic groups, with application to -omics 
+    data sets. Discordant uses a mixture model that “bins” molecular feature 
+    pairs based on their type of coexpression or coabbundance. Algorithm is 
+    explained further in "Differential Correlation for Sequencing Data"" (Siska 
+    et al. 2016).
 Encoding: UTF-8
 biocViews: ImmunoOncology, BiologicalQuestion, StatisticalMethod, 
     mRNAMicroarray, Microarray, Genetics, RNASeq
@@ -20,7 +23,7 @@ Suggests:
     knitr,
     testthat (>= 3.0.0)
 Imports: Rcpp, Biobase, stats, biwt, gtools, MASS, tools, dplyr, methods, utils
-License: GPL (>= 2)
+License: GPL-3
 URL: https://github.com/siskac/discordant
 NeedsCompilation: yes
 LinkingTo: Rcpp
